feat: 로그인 및 회원가입 완료
회원가입 부분에서 번호 인증을 누르면 otp 확인 버튼이 활성화 됨
otp를 인증하고 나면 passwd 부분이 활성화 됨
passwd 글자 수가 6이상이면 회원가입 버튼이 활성화 됨

--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -68,6 +68,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPersonName"
+        android:enabled="false"
         android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/singupOTP"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +101,7 @@
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="124dp"
         android:text="확인"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -130,6 +132,7 @@
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="210dp"
         android:text="인증확인"
+        android:enabled="false"
         app:layout_constraintBottom_toTopOf="@+id/siginupbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/singupOTP"
