--- a/app/src/main/res/layout/activity_food_value.xml
+++ b/app/src/main/res/layout/activity_food_value.xml
@@ -68,7 +68,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
             <!-- 바 [E] -->
 
-            <!-- total & progress [S] -->
+            <!-- total cal [S] -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -102,7 +102,9 @@
                     android:text="kcal"
                     android:textSize="@dimen/nor_font_size" />
             </LinearLayout>
+            <!-- total cal [E] -->
 
+            <!-- progress [S] -->
             <ProgressBar
                 android:id="@+id/progress_bar"
                 style="?android:attr/progressBarStyleHorizontal"
@@ -113,8 +115,9 @@
                 android:max="100"
                 android:progress="0"
                 android:scaleY="4" />
-            <!-- total & progress [E] -->
+            <!-- progress [E] -->
 
+            <!-- total district [S] -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -128,9 +131,10 @@
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
+                    android:id="@+id/total_district1"
+                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/total_district1"
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
@@ -146,9 +150,10 @@
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
+                    android:id="@+id/total_district2"
+                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/total_district2"
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
@@ -164,9 +169,10 @@
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
+                    android:id="@+id/total_district3"
+                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/total_district3"
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
@@ -188,9 +194,10 @@
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
+                    android:id="@+id/total_district4"
+                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/total_district4"
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
@@ -206,9 +213,10 @@
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
+                    android:id="@+id/total_district5"
+                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/total_district5"
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
@@ -224,12 +232,13 @@
                     android:textSize="@dimen/sub_font_size" />
 
                 <TextView
+                    android:id="@+id/total_district6"
+                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/total_district6"
                     android:textSize="@dimen/sub_font_size" />
             </LinearLayout>
-            <!-- total [E] -->
+            <!-- total district [E] -->
 
 
         </LinearLayout>
