--- a/app/src/main/res/layout/activity_privacy_health.xml
+++ b/app/src/main/res/layout/activity_privacy_health.xml
@@ -22,7 +22,7 @@
             >
 
             <Button
-                android:id="@+id/enter"
+                android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
